fix: filters on mobile

--- a/assets/styles/filters.scss
+++ b/assets/styles/filters.scss
@@ -1,7 +1,7 @@
 .mobile-toggle {
     display: none;
 
-    @media screen and(max-width: 826px) {
+    @media screen and(max-width: $bp-tablet-lg) {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -37,7 +37,7 @@
     .desktop-only {
         display: inline-flex !important;
 
-        @media screen and (max-width: 826px) {
+        @media screen and (max-width: $bp-tablet-lg) {
             display: none !important;
         }
     }
@@ -68,7 +68,7 @@
         }
     }
 
-    @media screen and (max-width: 826px) {
+    @media screen and (max-width: $bp-tablet-lg) {
         margin: 0;
         padding: 0;
         flex-direction: column;
@@ -108,7 +108,7 @@
         }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: $bp-tablet-md) {
         flex-direction: column;
 
         .filter {
