--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $bp-mobile-md: 376px;
 $bp-mobile-lg: 414px;
 $bp-tablet-sm: 562px;
 $bp-tablet-md: 768px;
+$bp-tablet-lg: 826px;
 $bp-desktop-sm: 1120px;
 $bp-desktop-md: 1281px;
 $bp-laptop-md: 1441px;
